# driftbase-python

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DRIFT_DIMENSIONS_UPDATE.md  LICENSE  README.md  RELEASE.md  drift-report-v3.html  drift-report.html  langchain_utils.py  pyproject.toml  test_first_run.py  test_langfuse_agent.py  test_verdict_cli.py
.claude/: README.md  claude.md  settings.local.json
.claude/context/: glossary.md  troubleshooting.md
.claude/decisions/: 001-scoring-pipeline-order.md  002-no-async-in-sdk.md  003-sqlite-only-free-tier.md  004-12-dimensions.md  005-confidence-tiers.md  006-weight-redistribution.md  007-learned-weights-blending.md  008-jsd-vs-kl-divergence.md  009-bootstrap-vs-parametric-ci.md  010-verdict-thresholds.md  011-isolation-forest-supplementary.md  012-power-analysis-minimum-runs.md  013-behavioral-inference-design.md  014-confidence-tiers-verdict-gating.md  015-12-dimensions-rationale.md  016-correlation-adjustment.md  017-non-blocking-capture.md  2026-04-11-langfuse-only-refocus.md
.claude/memory/: api_surface.md  design_decisions.md  hard_learned_lessons.md  known_issues.md
.claude/skills/: cli.md  release.md  scoring.md  storage.md  testing.md
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: bigrams.md  blob-storage.md  ci-integration.md  determinism.md  explain.md  feedback.md  fingerprint-schema-debt.md  latency-emd.md  migration-guide.md  observation-trees.md  otlp-metrics.md  run-quality.md  schema-v2.md  task-clustering.md  version-resolution.md
examples/: demo.py  dspy_example.py  haystack_example.py  llamaindex_example.py  smolagents_example.py
examples/langfuse-quickstart/: README.md
examples/langgraph-drift-experiment/: FIXES.md  QUICK_START.sh  README.md  analyze.py  requirements.txt  run_experiment.py  scenarios.py  test_tracer.py
github-action/: README.md  action.yml
github-action/example/: drift-check.yml
github-action/src/: run.py
scenarios/: support-bot.yaml
scripts/: publish.sh  verify_install.sh  verify_synthetic_numeric.py
src/driftbase/: __init__.py  client.py  config.py  engine.py  hypothesis_rules.yaml  pricing.py  telemetry.py  track.py  verdict.py
src/driftbase/backends/: base.py  factory.py  postgres.py  sqlite.py  sqlite_reader.py
src/driftbase/backends/migrations/: v0_11_schema_split.py
src/driftbase/cli/: _deps.py  cli.py  cli_baseline.py  cli_bookmark.py  cli_budget.py  cli_changes.py  cli_chart.py  cli_compare.py  cli_compare.py.backup  cli_connect.py  cli_cost.py  cli_demo.py  cli_deploy.py  cli_diagnose.py  cli_diff.py  cli_doctor.py  cli_explain.py  cli_explore.py  cli_export.py  cli_feedback.py  cli_git.py  cli_history.py  cli_init.py  cli_inspect.py  cli_mcp.py  cli_migrate.py  cli_plugin.py  cli_prune.py  cli_push.py  cli_report.py  cli_status.py  cli_tail.py  cli_testset.py  cli_upgrade.py  demo_narrative.py  demo_scenario_loader.py  demo_templates.py  filters.py  main.py
src/driftbase/connectors/: __init__.py  base.py  langfuse.py  langsmith.py  mapper.py
src/driftbase/integrations/: __init__.py  autogen.py  crewai.py  dspy.py  haystack.py  langchain.py  langgraph.py  llamaindex.py  openai.py  smolagents.py
src/driftbase/local/: anomaly_detector.py  baseline_calibrator.py  budget.py  diff.py  epoch_detector.py  feature_deriver.py  feedback_weights.py  fingerprinter.py  hypothesis_engine.py  hypothesis_rules.yaml  local_store.py  rootcause.py  run_quality.py  task_clustering.py  use_case_inference.py  weight_learner.py
src/driftbase/mcp/: __init__.py  server.py
src/driftbase/output/: __init__.py  evidence.py  otlp_emitter.py  verdict_payload.py
src/driftbase/plugins/: __init__.py
src/driftbase/reports/: html.py
src/driftbase/sdk/: framework_patches.py  instrument.py  scrubber.py  semantic.py  track.py  watcher.py
src/driftbase/stats/: __init__.py  attribution.py  dimension_ci.py  emd.py  hypothesis.py  mde.py  ngrams.py  power_forecast.py
src/driftbase/testsets/: __init__.py  automation.yaml  code_generation.yaml  content_generation.yaml  customer_support.yaml  data_analysis.yaml  devops_sre.yaml  ecommerce_sales.yaml  financial.yaml  general.yaml  healthcare.yaml  hr_recruiting.yaml  legal.yaml  research_rag.yaml  security_itops.yaml
src/driftbase/utils/: __init__.py  determinism.py  git.py  notify.py
tests/: test_anomaly_detector.py  test_baseline_calibrator.py  test_budget.py  test_cli_history.py  test_cold_start.py  test_confidence_tiers.py  test_config_limits.py  test_connectors.py  test_determinism.py  test_diff_calibration_integration.py  test_e2e.py  test_epoch_detector.py  test_feedback_otlp.py  test_framework_patches.py  test_ingestion_quality.py  test_mcp.py  test_power_analysis.py  test_rootcause.py  test_run_quality.py  test_schema_migration.py  test_signal_gains.py  test_statistical_foundation.py  test_synthetic_drift.py  test_testset.py  test_track.py  test_track_version_resolution.py  test_trust_surface.py  test_use_case_inference.py  test_verdict.py  test_version_source_warnings.py  test_weight_learner.py
tests/fixtures/synthetic/: __init__.py  generators.py
tests/helpers/: run_synthetic_drift.py
