[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "driftbase"
dynamic = ["version"]
description = "Behavioral drift monitoring for AI agents."
readme = "README.md"
requires-python = ">=3.9"
license-files = ["LICENSE"]
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "PyYAML>=6.0.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
analyze = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "rich>=13.0.0",
]
semantic = [
    "light-embed>=1.0.0",
]
postgres = [
    "asyncpg>=0.29.0",
]

[project.scripts]
driftbase = "driftbase.cli.main:cli"

[tool.setuptools.package-data]
driftbase = ["**/*.yaml", "hypothesis_rules.yaml"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py39"
line-length = 88
src = ["src", "tests"]
exclude = [".git", ".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # line length handled by formatter
    "E402",   # allow module level imports after code (needed for CLI setup)
    "SIM105", # allow standard try-except-pass blocks
    "SIM108", # allow standard if/else instead of forcing ternary operators
    "SIM115", # allow unmanaged file opening (standard for tempfile in tests)
    "SIM116", # allow if/elif chains instead of forcing dictionaries
    "SIM102", # allow nested if statements instead of forcing 'and'
    "N802",   # allow uppercase function properties (DRIFTBASE_ env vars)
    "N806",   # allow uppercase variables (Completions class alias)
    "B904",   # allow raise without 'from'
    "UP045",  # allow Optional[X] instead of forcing X | None
    "UP006",  # allow Dict[X, Y] instead of forcing dict[X, Y]
    "UP031",  # allow % string formatting
    "UP035",  # allow typing.Iterator
    "F841",   # allow unused local variables
    "F401",   # allow unused imports (useful during active development)
    "W291",   # ignore trailing whitespace
    "W292",   # ignore missing newline at end of file
    "W293",   # ignore blank lines containing whitespace
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true