[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "driftbase"
dynamic = ["version"]
description = "Behavioral drift monitoring for AI agents."
readme = "README.md"
requires-python = ">=3.9"
license-files = ["LICENSE"]
authors = [
    { name = "Driftbase", email = "info@driftbase.io" }
]
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "PyYAML>=6.0.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "sqlmodel>=0.0.14",
    'tomli>=2.0.0; python_version < "3.11"',
]

[project.urls]
Homepage = "https://driftbase.io"
Documentation = "https://driftbase.io/docs"
Repository = "https://github.com/driftbase-labs/driftbase-python"

[project.optional-dependencies]
analyze = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "rich>=13.0.0",
]
semantic = [
    "light-embed>=1.0.0",
]
tui = [
    "textual>=0.47.0",
    "plotext>=5.2.0",
]

[project.scripts]
driftbase = "driftbase.cli.main:cli"

[tool.setuptools.package-data]
driftbase = ["**/*.yaml", "hypothesis_rules.yaml"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py39"
line-length = 88
src = ["src", "tests"]
exclude = [".git", ".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "E501", "E402", "SIM105", "SIM108", "SIM115", "SIM116", "SIM102",
    "N802", "N806", "B904", "UP045", "UP006", "UP031", "UP035",
    "F841", "F401", "W291", "W292", "W293", "B009"
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
# Disable pedantic errors caused by lazy imports and missing external stubs
disable_error_code = ["import-untyped", "valid-type", "attr-defined", "no-any-return", "union-attr", "arg-type", "var-annotated", "dict-item", "no-redef", "syntax", "call-arg"]