[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "driftbase"
dynamic = ["version"]
description = "Behavioral drift detection for AI agents. Prevent regressions with automated drift checks in CI/CD."
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICENSE"]
keywords = [
    "ai", "agents", "drift-detection", "langfuse", "langsmith",
    "observability", "testing", "ci-cd", "behavioral-testing",
    "llm", "monitoring", "regression-detection"
]
authors = [
    { name = "Driftbase", email = "info@driftbase.io" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "PyYAML>=6.0.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "sqlmodel>=0.0.14",
    'tomli>=2.0.0; python_version < "3.11"',
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "rich>=13.0.0",
    "scikit-learn>=1.3.0",
    "langfuse>=2.0.0",
]

[project.urls]
Homepage = "https://driftbase.io"
Documentation = "https://driftbase.io/docs"
Repository = "https://github.com/driftbase-labs/driftbase-python"
Issues = "https://github.com/driftbase-labs/driftbase-python/issues"
Changelog = "https://github.com/driftbase-labs/driftbase-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=7.0.0",
    "ruff>=0.15.0",
]

[project.scripts]
driftbase = "driftbase.cli.main:cli"

[tool.setuptools.package-data]
driftbase = ["**/*.yaml", "hypothesis_rules.yaml"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]
exclude = [".git", ".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "E501", "E402", "SIM105", "SIM108", "SIM115", "SIM116", "SIM102",
    "N802", "N806", "B904", "UP045", "UP006", "UP031", "UP035",
    "F841", "F401", "W291", "W292", "W293", "B009"
]
extend-safe-fixes = ["SIM117"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
# Disable pedantic errors caused by lazy imports and missing external stubs
disable_error_code = ["import-untyped", "valid-type", "attr-defined", "no-any-return", "union-attr", "arg-type", "var-annotated", "dict-item", "no-redef", "syntax", "call-arg"]
